--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TechWorks is a leading agency that specializes in delivering innovative solutions to help businesses achieve their goals. Our services include Software Development, Sales, Project Management, CRM Management, Video & Photo Editing, Audio Editing, and more. We take pride in our creativity and innovation, which enable us to create scalable solutions that meet the unique needs of our clients. Our mission is to simplify the technological landscape and make it easier for our clients to do business."
     />
     <link rel="apple-touch-icon" href="https://res.cloudinary.com/emacon-production/image/upload/v1684677695/techworks/TECH_WORKS-removebg-preview_i4fwq4.png" />
     <!--
